--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "datatables.net-dt": "^1.10.24",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
+    "tabulator-tables": "^4.9.3",
     "vue": "^3.0.0",
     "vue-axios": "^3.2.4",
     "vue-bootstrap4-table": "^1.1.11",
     "vue-router": "^4.0.5",
+    "vue-tabulator": "^1.3.0",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
